--- a/src/components/ModalHeader/ModalHeader.scss
+++ b/src/components/ModalHeader/ModalHeader.scss
@@ -2,20 +2,30 @@
 
 .ModalHeader {
   text-transform: uppercase;
-  color: white;
+  color: $zorroa-color-white;
   background-color: black;
   height: 40px;
 
   @include flexRow;
   @include flexAlignItemsCenter;
   @include flexJustifySpaceBetween;
-}
 
-.ModalHeader-title {
-  margin: 0 10px;
-}
+  &__title {
+    margin: 0 10px;
+    flex-grow: 1;
 
-.ModalHeader-close {
-  @include zorroa-square-btn-lighten(40px);
-  color: white;
+    .ModalHeader__icon ~ & {
+      margin-left: 0;
+    }
+  }
+
+  &__icon {
+    @include zorroa-square-icon(40px);
+    flex-shrink: 1;
+  }
+
+  &__close {
+    @include zorroa-square-btn-lighten(40px);
+    color: $zorroa-color-white;
+  }
 }
