--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -112,7 +112,7 @@ $zorroa-dark-hover     : rgba($zorroa-color-white,0.2);
 $zorroa-dropzone       : rgba($zorroa-color-green-2, 0.75);
 
 /* shared metrics */
-
+$zorroa-metric-base : 10px;
 $zorroa-Sidebar-width : 340px;
 
 
