--- a/src/components/Inspector/Controlbar.scss
+++ b/src/components/Inspector/Controlbar.scss
@@ -1,53 +1,125 @@
 @import '../../styles/core-mixins.scss';
 
+$button-padding: $zorroa-metric-base / 2;
+$button-height: $zorroa-metric-base * 2;
+$control-bar-padding: $zorroa-metric-base;
+$control-bar-height: $control-bar-padding * 2 + $button-height;
+$control-bar-offset: $zorroa-metric-base;
+$options-menu-offset: $control-bar-height;
+
 .Controlbar {
   position: absolute;
-  bottom: 8px;
-  margin-left: auto;
-  margin-right: auto;
+  bottom: $control-bar-offset;
   left: 0;
   right: 0;
-  border-radius: 3px;
-  box-shadow: 0 2px 4px 4px rgba(0,0,0,0.25);
-  color: white;
-  background-color: rgba(0,0,0,0.75);
-  padding: 10px 0;
+  display: flex;
 
-  width: auto;
+  &__inner {
+    border-radius: 3px;
+    box-shadow: 0 2px 4px 4px rgba($zorroa-color-black,0.25);
+    color: $zorroa-color-white;
+    background-color: rgba($zorroa-color-black,0.75);
+    height: $control-bar-height;
+    width: auto;
+    margin-left: auto;
+    margin-right: auto;
 
-  @include flexRowCenter;
-  @include flexJustifySpaceBetween;
+    @include flexRowCenter;
+    @include flexJustifySpaceBetween;
 
-  button:disabled {
-    color: $zorroa-darkgray;
-    &:hover {
-      color: $zorroa-darkgray;
+  }
+
+  &__options-button {
+    background: none;
+    border: 0;
+    border-radius: 0;
+    font-size: 14px;
+    color: $zorroa-color-gray-dark-4;
+    padding: $zorroa-metric-base / 2;
+    display:  block;
+    width: 100%;
+
+    &:hover,
+    &:focus,
+    &--active {
+      background: rgba($zorroa-color-blue-1, .3);
+      color: $zorroa-color-white;
     }
   }
 
-  [class*='icon-'] {
+  &__button {
+    padding: 0 $button-padding;
+    height: $button-height;
     background: none;
     border: none;
-    color: white;
+    color: $zorroa-color-white;
     font-size: 20px;
-    &:hover {
-      color: $zorroa-sickly-green
+
+    &:hover,
+    &:focus {
+      color: $zorroa-color-green-1;
+
+      .Gauge {
+        fill: $zorroa-color-green-1;
+      }
+    }
+
+    &:disabled {
+      color: $zorroa-color-gray-dark-2;
+      &:hover,
+      &:focus {
+        color: $zorroa-color-gray-dark-2;
+      }
     }
   }
-}
 
-.Controlbar-title {
-  @include nowrap;
-  @include flexRowCenter;
-}
+  &__options {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    bottom: $options-menu-offset;
+    background: $zorroa-color-black;
+    border: 1px solid $zorroa-color-gray-dark-2;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+  }
 
-.Controlbar-separator {
-  width: 2px;
-  height: 24px;
-  background-color: $zorroa-darkgray;
-}
+  &__section-options {
+    &:hover,
+    &:focus {
+      .Gauge {
+        fill: $zorroa-color-green-1;
+      }
+    }
+  }
 
-.Controlbar-section {
-  @include flexRowCenter;
-  padding: 0 10px;
+  &__title {
+    @include nowrap;
+    @include flexRowCenter;
+  }
+
+  &__scrubber {
+    width: $zorroa-metric-base * 15;
+    text-align: center;
+  }
+
+  &__scrubber-input {
+    border: 1px solid $zorroa-color-gray-dark-2;
+    background: transparent;
+    width: $zorroa-metric-base * 4;
+    font-size: 14px;
+    margin: 0 $zorroa-metric-base;
+    color: $zorroa-color-white;
+    text-align: center;
+  }
+
+  &__section {
+    @include flexRowCenter;
+    padding: $control-bar-padding $zorroa-metric-base;
+
+    & ~ & {
+      border-left: 1px solid $zorroa-color-gray-dark-2;
+    }
+  }
 }
