--- a/src/components/Inspector/Flipbook.scss
+++ b/src/components/Inspector/Flipbook.scss
@@ -1,3 +1,17 @@
 .Flipbook {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-items: center;
+  justify-content: center;
 
+  &--is-loading {
+    height: 100vh;
+    width: 100vw;
+  }
+
+  &__progress-circle {
+    text-align: center;
+    width: 100%;
+  }
 }
