--- a/src/components/Inspector/Flipbook.scss
+++ b/src/components/Inspector/Flipbook.scss
@@ -10,6 +10,10 @@
     width: 100vw;
   }
 
+  &__canvas--is-loading {
+      display: none;
+  }
+
   &__progress-circle {
     text-align: center;
     width: 100%;
