--- a/src/components/Inspector/FlipbookViewer.scss
+++ b/src/components/Inspector/FlipbookViewer.scss
@@ -11,6 +11,16 @@ $film-strip-grabber-height: $zorroa-metric-base * 3;
   @include fullHeight;
   @include flexOn;
 
+  &__loading-status {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    text-align: center;
+    justify-content: center;
+  }
+
   &__pan-zoom {
     @include flexCol;
     @include flexOn;
