Fix sizing problems

--- a/src/components/Quickview/Quickview.scss
+++ b/src/components/Quickview/Quickview.scss
@@ -6,4 +6,14 @@
     background-size: cover;
     background-position: center center;
   }
+
+  &__flipbook {
+    background: $zorroa-color-gray-dark-2;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    height: 70vh;
+  }
 }
