--- a/src/components/Thumb/Thumb.scss
+++ b/src/components/Thumb/Thumb.scss
@@ -103,6 +103,12 @@
   }
 }
 
+.Thumb-flipbook {
+  height: 100%;
+  width: 100%;
+  display: flex;
+}
+
 .Thumb-stack {
   position: absolute;
   width: 82%;
