--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -55,12 +55,12 @@ $zorroa-color-purple-3: #8466b3;
 $zorroa-color-purple-4: #a672b6;
 $zorroa-color-purple-5: #757bd3;
 
-$zorroa-brown-1: #744e19;
-$zorroa-brown-2: #976a50;
-$zorroa-brown-3: #95794b;
+$zorroa-color-brown-1: #744e19;
+$zorroa-color-brown-2: #976a50;
+$zorroa-color-brown-3: #95794b;
 
-$zorroa-yellow-1: #ffd000;
-$zorroa-yellow-2: #f5cc6c;
+$zorroa-color-yellow-1: #ffd000;
+$zorroa-color-yellow-2: #f5cc6c;
 
 /*
 These are legacy colors. DO NOT use these anymore. Only colors starting
