--- a/src/components/Duration/Duration.scss
+++ b/src/components/Duration/Duration.scss
@@ -49,6 +49,7 @@ $background: rgba($zorroa-color-white, 0.75);
     background-color: $background;
     padding: 0 5px;
     height: 25px;
+    line-height: 25px;
     cursor: default;
   }
 
