--- a/src/components/Racetrack/FlipbookWidget.scss
+++ b/src/components/Racetrack/FlipbookWidget.scss
@@ -98,8 +98,8 @@ $fps-rate-offset: $zorroa-metric-base * 2;
 
   &__duration-container {
     position: absolute;
-    bottom: 0;
-    right: 0;
+    bottom: 1px;
+    right: 2px;
   }
 
   &__fps-rate {
@@ -139,6 +139,7 @@ $fps-rate-offset: $zorroa-metric-base * 2;
 
   &__player-container {
     position: relative;
+    margin: $zorroa-metric-base $zorroa-metric-base 0;
   }
 
   &__scrubber {
