--- a/src/components/Form/Input.scss
+++ b/src/components/Form/Input.scss
@@ -15,6 +15,10 @@
 
   &__label {
     color: $zorroa-color-gray-dark-3;
+
+    .dark & {
+      color: $zorroa-color-gray-dark-4;
+    }
   }
 
   &__input {
