--- a/src/components/Exports/Exports.scss
+++ b/src/components/Exports/Exports.scss
@@ -1,12 +1,16 @@
 @import '../../styles/core-mixins.scss';
 
+$max-height: 80vw;
+$content-height: calc(80vw - 40px);
+
 .Exports {
+  max-height: $max-height;
+
   &__body {
     display: flex;
-    height: 80vw;
 
     .dark & {
-      background-color: $zorroa-color-black;
+      background-color: #000;
     }
   }
 
@@ -15,7 +19,7 @@
     padding: 30px;
     overflow: hidden;
     overflow-y: scroll;
-    max-height: 100%;
+    height: $content-height;
     color: $zorroa-color-gray-dark-4;
     width: 300px;
     max-width: 300px;
@@ -26,8 +30,15 @@
   }
 
   &__mainbar {
-    margin: 0 20px;
+    padding: 0 20px;
     flex-grow: 1;
+    height: $content-height;
+    overflow: hidden;
+    overflow-y: scroll;
+
+    .dark & {
+      color: $zorroa-color-gray-dark-4;
+    }
   }
 
   &__form-element {
@@ -44,6 +55,10 @@
 
   &__form-select {
     width: 130px;
+
+    &--large {
+      width: 100%;
+    }
   }
 
   &__field-group {
@@ -56,6 +71,14 @@
 
   &__form-input {
     width: 130px;
+
+    &--large {
+      width: 100%;
+    }
+
+    &--inline {
+      margin: 0 10px;
+    }
   }
 
   &__form-help {
@@ -76,23 +99,58 @@
   &__review-section {
     display: flex;
     padding: 10px 0;
-    border-bottom: 1px solid $zorroa-color-gray-dark-4;
+    border-top: 1px solid $zorroa-color-gray-dark-4;
     margin: 0;
     line-height: 1.5;
+
+    &--heading {
+      border-top: 0;
+      padding: 0 0 5px;
+    }
+
+    &:last-child {
+      border-top: 0;
+    }
   }
 
   &__review-term {
     width: 130px;
+    color: $zorroa-color-gray-dark-4;
+    font-size: 14px;
+    font-weight: 500;
   }
 
   &__review-definition {
     display: flex;
     flex-direction: column;
+
+    &--demphasized {
+      color: $zorroa-color-gray-dark-3;
+
+      .dark & {
+        color: $zorroa-color-gray-dark-2;
+      }
+    }
   }
 
-  &__form-buttons {
+  &__form-footer {
+    position: relative;
+  }
+
+  &__main-form-buttons {
     display: flex;
     margin: 20px 0;
+    position: absolute;
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: 400ms ease-in-out transform, 400ms ease-in-out opacity;
+    pointer-events: none;
+
+    &--visible {
+      transform: translateX(0);
+      opacity: 1;
+      pointer-events: auto;
+    }
   }
 
   &__review-section--selected-assets {
@@ -107,5 +165,55 @@
     display: flex;
     flex-flow: column wrap;
     width: 100%;
+  }
+
+  &__asset-preview-wrapper {
+    border: 1px solid $zorroa-color-gray-dark-3;
+    margin: 20px 0;
+
+    .dark & {
+      border: 1px solid $zorroa-color-gray-dark-2;
+      background: $zorroa-color-gray-dark-1;
+    }
+
+    &,
+    & * {
+      box-sizing: border-box;
+    }
+  }
+
+  &__asset-preview {
+    list-style: none;
+    margin: 5px;
+    padding: 0;
+    font-size: 0;
+    max-height: 300px;
+    overflow: hidden;
+    position: relative;
+
+    &::after {
+      content: '';
+      display: block;
+      height: 40px;
+      width: 100%;
+      background: linear-gradient(rgba($zorroa-color-white, 0) 10px, rgba($zorroa-color-white, 1));
+      z-index: 1;
+      bottom: 0;
+      position: absolute;
+
+      .dark & {
+        background: linear-gradient(rgba($zorroa-color-black, 0), rgba($zorroa-color-black, 1));
+      }
+    }
+  }
+
+  &__asset-preview-item {
+    width: calc((100% - 30px) / 3);
+    margin: 5px;
+  }
+
+  &__asset-preview-proxy {
+    width: 100%;
+    height: auto;
   }
 }
