--- a/src/components/Form/variables.scss
+++ b/src/components/Form/variables.scss
@@ -4,5 +4,5 @@ $form-element-height: 40px;
 $form-element-top-margin: 5px;
 $form-element-bottom-margin: 10px;
 $form-element-border-size: 1px;
-$form-element-border: $form-element-border-size solid $zorroa-color-border;
+$form-element-border: $form-element-border-size solid $zorroa-color-gray-dark-4;
 $form-element-border-radius: 3px;
