--- a/src/components/Exports/ExportsSection.scss
+++ b/src/components/Exports/ExportsSection.scss
@@ -11,6 +11,10 @@ $toggle-height: 16px;
   position: relative;
   border-bottom: 1px solid $zorroa-color-gray-dark-3;
 
+  &:last-child {
+    border-bottom: 0;
+  }
+
   &__header {
     display: flex;
     flex-direction: row;
@@ -23,9 +27,13 @@ $toggle-height: 16px;
     font-size: 18px;
     line-height: $title-height;
     height: $title-height;
-    margin: $title-margin 0;
+    margin: $title-margin 0 $title-margin 10px;
     flex-grow: 1;
     color: $zorroa-color-gray-dark-2;
+
+    &--required {
+      margin-left: 0;
+    }
 
     .dark & {
       color: $zorroa-color-gray-light-1;
@@ -41,10 +49,14 @@ $toggle-height: 16px;
   }
 
   &__content {
+    transition: 300ms opacity ease-in-out, 300ms transform ease-in-out;
+
     &--closed {
-      height: 0;
-      visibility: hidden;
+      opacity: 0;
       overflow-y: hidden;
+      height: 0;
+      transform: scale(1.5);
+      transition: 300ms opacity ease-in-out 300ms, 300ms transform ease-in-out 300ms, 300ms height linear 300ms;
     }
 
     &--disabled {
@@ -72,6 +84,10 @@ $toggle-height: 16px;
     box-sizing: content-box;
     cursor: pointer;
 
+    .dark & {
+      border-color: $zorroa-color-gray-dark-4;
+    }
+
     &::before,
     &::after {
       border-top: 1px solid $zorroa-color-gray-dark-3;
@@ -82,6 +98,10 @@ $toggle-height: 16px;
       top: $toggle-height / 2;
       left: $toggle-height / 4;
       transition: 250ms transform ease-in-out;
+
+      .dark & {
+        border-color: $zorroa-color-gray-dark-4;
+      }
     }
 
     &::before {
