--- a/src/components/Exports/Exports.scss
+++ b/src/components/Exports/Exports.scss
@@ -46,6 +46,8 @@ $content-height: calc(80vw - 40px);
     align-items: center;
     align-content: center;
     justify-content: flex-start;
+    flex-grow: 1;
+    flex-shrink: 0;
 
     &--nested {
       align-items: flex-start;
@@ -82,6 +84,7 @@ $content-height: calc(80vw - 40px);
 
     &--inline {
       margin: 0 10px;
+      flex-grow: 1;
 
       &:last-child {
         margin-right: 0;
@@ -230,6 +233,7 @@ $content-height: calc(80vw - 40px);
       justify-items: flex-end;
       align-items: flex-end;
       align-content: flex-end;
+      margin-left: 20px;
     }
   }
 
