Add Flipbook viewer for mono and multipage modes

--- a/src/components/Duration/Duration.scss
+++ b/src/components/Duration/Duration.scss
@@ -51,6 +51,7 @@ $background: rgba($zorroa-color-white, 0.75);
     height: 25px;
     line-height: 25px;
     cursor: default;
+    font-size: 14px;
   }
 
   &__play {
