--- a/src/components/Form/Button.scss
+++ b/src/components/Form/Button.scss
@@ -15,8 +15,7 @@
   cursor: pointer;
   position: relative;
 
-  &:hover,
-  &:focus {
+  &:hover {
     background-color: $zorroa-color-gray-dark-4;
     border-color: $zorroa-color-gray-dark-4;
   }
@@ -36,8 +35,7 @@
       margin-left: 0;
     }
 
-    &:hover,
-    &:focus {
+    &:hover {
       border-color: transparent;
       background: none;
       color: $zorroa-color-black;
@@ -46,6 +44,11 @@
         color: $zorroa-color-white;
       }
     }
+  }
+
+  &--error {
+    background-color: $zorroa-color-pink-1;
+    border-color: $zorroa-color-pink-1;
   }
 
   &--mini {
@@ -86,8 +89,12 @@
     }
 
     &--loading {
-      animation:spin 2s linear infinite;
-      background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2228%22%20height%3D%2228%22%3E%3Cg%20fill%3D%22%23FFF%22%20fill-rule%3D%22evenodd%22%3E%3Cpath%20d%3D%22M12.5%201.7c0%20.9.8%201.6%201.7%201.6%201%200%201.7-.7%201.7-1.6%200-1-.8-1.7-1.7-1.7-1%200-1.7.7-1.7%201.7M18.8%202.5c-.2.3%200%20.7.3.9.4.1.8%200%201-.4.1-.3%200-.7-.4-.9a.7.7%200%200%200-1%20.4M23.2%205.3c-.3.2-.3.7%200%201%20.2.4.7.4%201%20.1.4-.3.4-.8.1-1a.8.8%200%200%200-1-.1M26.1%209.6c-.4.1-.6.6-.5%201%20.1.5.6.7%201%20.6.5-.2.8-.6.6-1a.9.9%200%200%200-1-.6M27%2014.7a1%201%200%200%200-1%20.8c0%20.5.4%201%20.9%201s1-.3%201-.8-.3-1-.8-1M25.8%2019.7a1%201%200%200%200-1.3.4%201%201%200%200%200%20.3%201.3c.5.3%201.1.1%201.4-.3.2-.5%200-1.1-.4-1.4M22.6%2023.9a1%201%200%200%200-1.5-.3%201%201%200%200%200-.2%201.5c.3.4%201%20.5%201.5.2.4-.3.5-1%20.2-1.4M18%2026.4c-.2-.6-.8-1-1.4-.9-.6.1-1%20.7-.8%201.3%200%20.6.7%201%201.3.9.6-.1%201-.7.9-1.3M12.7%2026.8c.1-.6-.3-1.2-1-1.4-.6%200-1.2.3-1.4%201%200%20.6.3%201.2%201%201.3.6.2%201.3-.2%201.4-.9M7.7%2025.2c.4-.6.3-1.3-.3-1.7-.6-.4-1.4-.3-1.8.2-.4.6-.3%201.4.3%201.8.6.4%201.4.3%201.8-.3M3.7%2021.7c.7-.4.9-1.2.5-1.8-.3-.6-1.2-.8-1.8-.5-.6.4-.9%201.2-.5%201.8.4.7%201.2.9%201.8.5M1.6%2017c.7-.1%201.3-.8%201.2-1.6%200-.7-.8-1.3-1.5-1.2-.8%200-1.4.8-1.3%201.5%200%20.8.8%201.3%201.6%201.3M1.5%2011.8c.8.2%201.6-.2%201.9-1%20.2-.7-.2-1.6-1-1.8-.7-.3-1.6.2-1.8%201-.3.7.1%201.5%201%201.8M3.6%207c.6.5%201.6.5%202.2-.1.6-.7.5-1.6-.1-2.2-.7-.6-1.6-.5-2.2.1-.6.6-.5%201.6.1%202.2M7.5%203.4c.3.8%201.3%201.2%202.1.8.8-.4%201.2-1.3.8-2.1a1.6%201.6%200%200%200-2.1-.8c-.8.4-1.2%201.3-.8%202.1%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E')
+      animation: spin 750ms linear infinite;
+      border: 3px solid rgba($zorroa-color-white, .5);
+      height: 16px;
+      width: 16px;
+      border-radius: 100%;
+      border-top-color: $zorroa-color-white;
     }
 
     &--success {
@@ -96,12 +103,33 @@
     }
 
     &--error {
-      background: red;
+      width: 0;
+      height: 0;
+      border-left: 14px solid transparent;
+      border-right: 14px solid transparent;
+      border-bottom: 20px solid $zorroa-color-white;
+
+      &::before {
+        content: '!';
+        color: $zorroa-color-pink-1;
+        font-size: 12px;
+        text-align: center;
+        width: 100%;
+        display: block;
+        position: absolute;
+        left: -1px;
+        line-height: 24px;
+        font-weight: bold;
+      }
     }
   }
 
   &__label {
     transition: 300ms transform ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 
     &--state-active {
       transform: translateX(15px);
