--- a/src/components/Flipbook/Flipbook.scss
+++ b/src/components/Flipbook/Flipbook.scss
@@ -1,3 +1,5 @@
+@import '../../styles/core-mixins.scss';
+
 .Flipbook {
   display: flex;
   align-items: center;
@@ -10,8 +12,14 @@
     width: 100vw;
   }
 
-  &__canvas--is-loading {
-      display: none;
+  &__canvas {
+    &--paused {
+      opacity: 0;
+    }
+
+    &--is-loading {
+        display: none;
+    }
   }
 
   &__progress-circle {
