--- a/src/components/Inspector/Controlbar.scss
+++ b/src/components/Inspector/Controlbar.scss
@@ -29,6 +29,32 @@ $options-menu-offset: $control-bar-height;
 
   }
 
+  &__loop-button {
+    background-color: transparent;
+    overflow: hidden;
+    text-indent: -5000px;
+    border: 0;
+    width: 15px;
+    height: 20px;
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+
+    & {
+      background-image: url("data:image/svg+xml;utf8,%20%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2227%22%20height%3D%2227%22%3E%3Cpath%20fill%3D%22none%22%20fill-rule%3D%22nonzero%22%20stroke%3D%22#{$zorroa-color-white}%22%20d%3D%22M13.5%2025.8h.1c3.2%200%206.4-1.3%208.7-3.5l3.2%203.5v-10h-9.7l3.3%203.3a8%208%200%200%201-13.4-5.8%208%208%200%200%201%208-7.8V1a12.4%2012.4%200%200%200-.2%2024.8z%22%2F%3E%3C%2Fsvg%3E%0A");
+    }
+
+    &:hover,
+    &--active {
+      background-image: url("data:image/svg+xml;utf8,%20%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2227%22%20height%3D%2227%22%3E%3Cpath%20fill%3D%22none%22%20fill-rule%3D%22nonzero%22%20stroke%3D%22#{$zorroa-color-green-1}%22%20d%3D%22M13.5%2025.8h.1c3.2%200%206.4-1.3%208.7-3.5l3.2%203.5v-10h-9.7l3.3%203.3a8%208%200%200%201-13.4-5.8%208%208%200%200%201%208-7.8V1a12.4%2012.4%200%200%200-.2%2024.8z%22%2F%3E%3C%2Fsvg%3E%0A");
+    }
+
+    &--loop-paused {
+      animation: spin 2000ms linear infinite reverse; // This value is copied in the JS
+    }
+  }
+
+
   &__options-button {
     background: none;
     border: 0;
@@ -108,3 +134,5 @@ $options-menu-offset: $control-bar-height;
     }
   }
 }
+
+@keyframes spin { 100% { transform:rotate(360deg); } }
