--- a/src/components/Inspector/Controlbar.scss
+++ b/src/components/Inspector/Controlbar.scss
@@ -34,23 +34,23 @@ $options-menu-offset: $control-bar-height;
     overflow: hidden;
     text-indent: -5000px;
     border: 0;
-    width: 15px;
+    width: 20px;
     height: 20px;
     background-size: contain;
     background-position: center center;
     background-repeat: no-repeat;
 
     & {
-      background-image: url("data:image/svg+xml;utf8,%20%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2227%22%20height%3D%2227%22%3E%3Cpath%20fill%3D%22none%22%20fill-rule%3D%22nonzero%22%20stroke%3D%22#{$zorroa-color-white}%22%20d%3D%22M13.5%2025.8h.1c3.2%200%206.4-1.3%208.7-3.5l3.2%203.5v-10h-9.7l3.3%203.3a8%208%200%200%201-13.4-5.8%208%208%200%200%201%208-7.8V1a12.4%2012.4%200%200%200-.2%2024.8z%22%2F%3E%3C%2Fsvg%3E%0A");
+      background-image: url("data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22768%22%20height%3D%22768%22%3E%3Cpath%20fill%3D%22#{$zorroa-color-white}%22%20d%3D%22M384%20576v-96l127.5%20127.5-127.5%20129v-96A257.4%20257.4%200%200%201%20127.5%20384c0-49.5%2015-97.5%2040.5-136.5l46.5%2046.5c-15%2027-22.5%2057-22.5%2090%200%20106.5%2085.5%20192%20192%20192zm0-448.5c141%200%20256.5%20115.5%20256.5%20256.5%200%2049.5-15%2097.5-40.5%20136.5L553.5%20474c15-27%2022.5-57%2022.5-90%200-106.5-85.5-192-192-192v96L256.5%20160.5%20384%2031.5v96z%22%2F%3E%3C%2Fsvg%3E");
     }
 
     &:hover,
     &--active {
-      background-image: url("data:image/svg+xml;utf8,%20%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2227%22%20height%3D%2227%22%3E%3Cpath%20fill%3D%22none%22%20fill-rule%3D%22nonzero%22%20stroke%3D%22#{$zorroa-color-green-1}%22%20d%3D%22M13.5%2025.8h.1c3.2%200%206.4-1.3%208.7-3.5l3.2%203.5v-10h-9.7l3.3%203.3a8%208%200%200%201-13.4-5.8%208%208%200%200%201%208-7.8V1a12.4%2012.4%200%200%200-.2%2024.8z%22%2F%3E%3C%2Fsvg%3E%0A");
+      background-image: url("data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22768%22%20height%3D%22768%22%3E%3Cpath%20fill%3D%22#{$zorroa-color-green-1}%22%20d%3D%22M384%20576v-96l127.5%20127.5-127.5%20129v-96A257.4%20257.4%200%200%201%20127.5%20384c0-49.5%2015-97.5%2040.5-136.5l46.5%2046.5c-15%2027-22.5%2057-22.5%2090%200%20106.5%2085.5%20192%20192%20192zm0-448.5c141%200%20256.5%20115.5%20256.5%20256.5%200%2049.5-15%2097.5-40.5%20136.5L553.5%20474c15-27%2022.5-57%2022.5-90%200-106.5-85.5-192-192-192v96L256.5%20160.5%20384%2031.5v96z%22%2F%3E%3C%2Fsvg%3E");
     }
 
     &--loop-paused {
-      animation: spin 2000ms linear infinite reverse; // This value is copied in the JS
+      animation: spin 2000ms cubic-bezier(0.645, 0.045, 0.355, 1) infinite reverse; // This value is copied in the JS
     }
   }
 
