--- a/src/components/FieldTemplate/FieldTemplate.scss
+++ b/src/components/FieldTemplate/FieldTemplate.scss
@@ -1,15 +1,16 @@
 @import '../../styles/core-mixins.scss';
 
 .FieldTemplate {
+  @include flexCol;
+  background: rgba($zorroa-color-white, .9);
+}
+
+.FieldTemplate-group {
   @include flexRow;
-  @include flexAlignItemsCenter;
 }
 
 .FieldTemplate-field {
   @include flexRow;
-  @include flexAlignItemsCenter;
-  //font-size: 13px;
-  //line-height: 1.4em;
 }
 
 .FieldTemplate-label {
