--- a/src/components/ResizableWindow/ResizableWindow.scss
+++ b/src/components/ResizableWindow/ResizableWindow.scss
@@ -5,6 +5,7 @@
   border-radius: 3px;
   overflow: hidden;
   position: absolute; // Expects absolute top, left, width, height set externally
+  z-index: 1;
 }
 
 .ResizableWindow-header {
