--- a/src/components/Form/Radio.scss
+++ b/src/components/Form/Radio.scss
@@ -6,31 +6,35 @@ $radio-size: 20px;
   display: block;
   height: $radio-size;
   width: $radio-size;
-  visibility: hidden;
   position: relative;
+  border-radius: 100%;
+  border: 1px solid $zorroa-color-gray-dark-2;
+  margin-right: 10px;
 
-  &::before {
+  &-native {
+    display: none;
+  }
+
+  &-virtual {
     content: ' ';
     display: block;
     width: $radio-size;
     height: $radio-size ;
-    border-radius: 100%;
-    border: 1px solid $zorroa-color-gray-dark-2;
     visibility: visible;
-  }
 
-  &:checked::after {
-    content: ' ';
-    display: block;
-    width: $radio-size - 4px;
-    height: $radio-size - 4px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: ($radio-size - 4px) / -2;
-    margin-left: ($radio-size - 4px) / -2;
-    background: $zorroa-color-green-1;
-    visibility: visible;
-    border-radius: 100%;
+    :checked ~ & {
+      content: ' ';
+      display: block;
+      width: $radio-size - 4px;
+      height: $radio-size - 4px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-top: ($radio-size - 4px) / -2;
+      margin-left: ($radio-size - 4px) / -2;
+      background: $zorroa-color-green-1;
+      visibility: visible;
+      border-radius: 100%;
+    }
   }
 }
