--- a/src/components/Form/Select.scss
+++ b/src/components/Form/Select.scss
@@ -33,6 +33,7 @@
   margin: 0;
   outline: none;
   -moz-appearance: none;
+  -webkit-appearance: none;
   text-overflow: '';
   outline: 0;
   padding: 0 10px;
