--- a/src/components/ProgressBar/ProgressBar.scss
+++ b/src/components/ProgressBar/ProgressBar.scss
@@ -11,9 +11,11 @@
     opacity: 0.75;
     background: repeating-linear-gradient(-45deg,#777,#777 10px,#888 10px,#888 20px);
     background-size: 28px 28px;
-    -webkit-animation: slide 20s infinite linear forwards;
-    -moz-animation: slide 20s infinite linear forwards;
     animation: slide 20s infinite linear forwards;
+
+    &.fast {
+      animation: slide 2s infinite linear forwards;
+    }
   }
 }
 
