--- a/src/components/Inspector/FlipbookStrip.scss
+++ b/src/components/Inspector/FlipbookStrip.scss
@@ -1,15 +1,22 @@
 @import '../../styles/core-mixins.scss';
 
 .FlipbookStrip {
-  border-top: 1px solid $zorroa-color-gray-dark-3;
-  z-index: 2;
-  display: flex;
-  height: 200px;
+  overflow: hidden;
   max-width: 100vw;
-  overflow: scroll;
-  overflow-y: hidden;
-  flex-shrink: 0;
-  flex-basis: 200px;
+  max-height: 200px;
+
+  &:hover {
+    overflow-x: scroll;
+  }
+
+  &__container {
+    border-top: 1px solid $zorroa-color-gray-dark-3;
+    z-index: 2;
+    display: flex;
+    height: 200px;
+    flex-shrink: 0;
+    flex-basis: 200px;
+  }
 
   &__frame-canvas {
     height: 100%;
